Improve responsive view of header and fix bug in chrome.
+ Header search box layout was working in firefox but broken in chrome, this fixes that.
+ Also remove the header search in mobile view.

--- a/public/app/ui/components/search/SearchComponent.less
+++ b/public/app/ui/components/search/SearchComponent.less
@@ -2,15 +2,24 @@
     background: transparent;
 
     &.header-search {
+        position: absolute;
+        top: 0;
+        right: 0;
         margin-top: @padding-base-vertical;
+        margin-right: @padding-base-horizontal;
 
-        input {
-            max-width: 100%;
-            width: 180px;
-            transition: width ease .5s;
+        form {
+            display: inline;
 
-            &:focus {
-                width: 400px;
+            input {
+                max-width: 100%;
+                width: 180px;
+                transition: width ease .5s;
+
+
+                &:focus {
+                    width: 350px;
+                }
             }
         }
     }
