--- a/public/less/layout.less
+++ b/public/less/layout.less
@@ -26,7 +26,6 @@
             background-color: #FFF;
             border-bottom: 3px @brand-primary solid;
             color: #777;
-            
         }
     }
 }
@@ -34,9 +33,13 @@
 header.navbar {
     margin-bottom: 0;
 
-    .logo{
+    .logo {
         padding-top: @padding-large-vertical;
         padding-bottom: @padding-large-vertical;
+    }
+
+    .container {
+        position: relative;
     }
 
     #nav-main-menu {
